traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:34: error: illegal start of simple pattern
  for (<- 0 to getMondeLargeur()-2){
       ^TraversalZigZag:40: error: '<-' expected but '}' found.
}
^